2006-04-06 Yen-Ju Chen <yjchenx at gmail>

	* Use AZWindow protocol instead crash-prone ObWindow.
	(This could be unstable).
	* Remove menuframe and clean up ObWindow.
	* Remove some of the glib (gint, glong and gboolean mainly).

2006-04-05 Yen-Ju Chen <yjchenx at gmail>

	* Try to implement arbitrary window level.
	* Improve GNUstep window style.
	{Hope it is a stable version).
	* Finish arbitrary window level (sort of).
	* Finish porting menuframe.
	* Use AZClient for transient_for (This was unstable before).

2006-04-04 Yen-Ju Chen <yjchenx at gmail>

	* Move focus into AZFocusManager.
	* Use AZClient in transients.
	* Support GNUstep window style.
	* Merge into trunk (Hope it work).
	* Add README.

2006-04-03 Yen-Ju Chen <yjchenx at gmail>

	* move place and resist as category of AZClient.
	* finish porting on popup, icon popup and pager popup.
	* add stacking back in AZPopUp.
	  It has no any effect, but potentially useful for stacking.
	* port moveresize.
	* use AZClient in focus.
	* use protocol instead of callback for x event.

2006-04-02 Yen-Ju Chen <yjchenx at gmail>

	* revert back to r632.
	* use AZClient for AZClientManager.
	* use AZClient in moveresize.
	* use AZClient in place.
	* fix a weird bug in AZStacking.
	* use AZClient in AZGroup.
	* use AZClient in resist.
	This should be a stable version.
	* use AZClient in AZEventHandler and AZScreen.
	* remove usued stacking handling in popup for porting later.

2006-04-01 Yen-Ju Chen <yjchenx at gmail>

	* Move some functions of ObClient into AZClient.
	* Merge ObClient into AZClient.
	* Remove client.
	* Use AZClient as mush as possible.
	  If Azalea becomes unstable, use this version for debug.

2006-03-31 Yen-Ju Chen <yjchenx at gmail>

	* Move some members and functions of ObClient into AZClient.

2006-03-30 Yen-Ju Chen <yjchenx at gmail>

	* Move some members of ObClient into AZClient.

2006-03-29 Yen-Ju Chen <yjchenx at gmail>

	* Move some members of ObClient into AZClient.
